# Practice-C-OS-

./: .gitignore  README.md
FInal/RAW/: READMY.md  client.c  server.c
FInal/TAXI/: READMY.md  ctCenter.c
Net_Prog/: client  server
Net_Prog/lab1/: client.c  server.c
Net_Prog/lab2/: cl  client.c  se  server.c
Socket_stuff/RAW/: client.c  server.c
Socket_stuff/multicast/: client.c  server.c
Socket_stuff/soket_pr1/1st/: client.c  server.c
Socket_stuff/soket_pr1/2nd/: client.c  server.c
Socket_stuff/soket_pr1/3rd/: client.c  server.c
Socket_stuff/soket_pr1/4th/: client.c  server.c
Socket_stuff/soket_pr1/5th (AI)/: TCP_Cl.c  UDP_Cl.c  server.c
pr_01/: main.c
pr_02/: main.c
pr_03/: main.c
pr_04/: main.c
pr_05/: main.c
pr_06/: main.c
pr_07/: .gitignore
pr_07/3rd_Task/: CMakeLists.txt
pr_07/3rd_Task/src/: main.c
pr_07/Dinam/: CMakeLists.txt
pr_07/Dinam/include/: baldur.h  tor.h
pr_07/Dinam/src/: baldur.c  loki.c  tor.c
pr_07/Stat/: CMakeLists.txt
pr_07/Stat/include/: loki.h
pr_07/Stat/src/: main.c
pr_08/: first.c  second.c  threerd.c
pr_09/: main.c  shop.c
pr_10/: main.c
pr_11/: msgque.c
pr_12/: sharedMEM.c
